# 2022_C-_Programming

homework1/: file_empty.txt
homework2/BankCell/: BankCell.cpp
homework3/Stack/StackOut/: StackOut.cpp
homework3/Tasks/: CMakeLists.txt  Task1.cpp  Task2.cpp
homework4/CMakeProject1/: CMakeLists.txt  CMakeProject1.h  Task1.cpp  Task2.cpp
homework5/CMakeProject1/: CMakeLists.txt  CMakeProject1.h  Heros.cpp  Task2.cpp
homework5/Roulette/: Roulette.cpp
homework6/HomeTasks/: CMakeLists.txt  HomeTasks.cpp  HomeTasks.h  StrokaN.txt  Task2.cpp  Task3.cpp  finish.txt
homework7/ParProg/: ParProg.cpp
